# HTTP_SERVER_C

./: .gitignore  Makefile  config.conf  config_defaults.h  config_editor_dynamic.h  forever_client  forever_client.c  http_handler.c  http_server  http_server.c  http_server.h  myqueue.c  readme.txt  server.c  server.h
Demo/: config.cfg  config_GUI  curseform_MacOS  curseform_freeBSD  curseform_linux  server_MacOS  server_freeBSD  server_linux
JudaoTest/: a.out  gmon.out  http_client.c  process_pool.c
JudaoTest/Integration/: CMakeLists.txt  Makefile  config.conf  config_defaults.h  get_config.c  get_configuration.c  get_configuration.h  http_handler.c  http_handler.h  myqueue.c  myqueue.h  server.c  server.h  test_connection.rb  thread_handler.c  thread_handler.h
JudaoTest/Integration_final/: Makefile  config.cfg  config_editor_dynamic.c  create_configuration.h  error_404.html  get_config.c  get_configuration.h  gmon.out  http_handler.h  read.c  server.c  server.h  test_connection.rb
JudaoTest/Integration_final/html_static/: home.html  index2.html
JudaoTest/Integration_with_processes_1/: CMakeLists.txt  Makefile  config.cfg  config_editor_dynamic.h  get_configuration.c  gmon.out  http_handler.c  http_handler.h  http_handler_bkup.c  init_config.c  myqueue.c  profile-data.txt  readme.txt  server.c  server.h  test_connection.rb  thread_handler.h
JudaoTest/actual_servers/: client.c  server.c
JudaoTest/archived/: a.out  client.c  http_handler2  multi_thread_http_server_test.c  multi_thread_http_server_test2(improved).c  server.c
JudaoTest/archived/Integration_v2/: CMakeLists.txt  config.conf  config_defaults.h  create_configuration.c  get_config.c  get_configuration.c  get_configuration.h  gmon.out  http_handler.c  http_handler.h  http_server  index3.html  myqueue.c  myqueue.h  output  read  server.c  server.h
JudaoTest/http_server_ver2/: http_handler.h
JudaoTest/ncurses/: ncurses_test.c
JudaoTest/threads/: Makefile  multi_thread_http_server_test (copy 1).c  multi_thread_http_server_test.c  myqueue.h  server.c
JudaoTest/threads/client_test_scripts/: client.rb  client2.rb  manyclients.bash
JudaoTest/threads/testfiles/: 1.c
tester/: A_Shorthand_Guide_To_LibConfig.txt  A_Shorthand_Guide_To_NCurses.txt  CMakeLists.txt  Sources.txt  UI.c  UI3.c  UI4.c  a.out  config.cfg  config2.cfg  config_editor_dynamic.c  config_editor_dynamic.h  configurations.c  hello.c  ideas.txt  stoi.c  testprog.c
